improved styling and validations

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
-  <% @restaurants.each do |restaurant| %>
-    <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
-  <% end %>
+  <div class="row justify-content-md-center">
+    <div class="col-md-auto">
+      <% @restaurants.each do |restaurant| %>
+        <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
+      <% end %>
+    </div>
+  </div>
 </div>
