--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,27 @@
 <div class="container">
-  <h2><%= @restaurant.name %></h2>
-  <p>Adress: <%= @restaurant.address %></p>
-  <p>Telephone: <%= @restaurant.phone_number %></p>
-  <p>Category: <%= @restaurant.category %></p>
-  <% @restaurant.reviews.each do |review| %>
-    <p><%= "⭐" * review.rating %></p>
-  <% end %>
-  <%= link_to 'Add Review', new_restaurant_review_path(@restaurant) %>
+  <div class="row justify-content-md-center">
+    <div class="col-sm-auto">
+      <h2><%= @restaurant.name %></h2>
+      <p>Address: <%= @restaurant.address %></p> 
+      <p>Telephone: <%= @restaurant.phone_number.empty? ? "No info" : @restaurant.phone_number %></p>
+      <p>Category: <%= @restaurant.category.capitalize %></p>
+      <h4>Reviews:</h4>
+      <% if @restaurant.reviews.empty? %>
+      <p>No reviews yet, write one ↙️ </p>
+      <% else %>
+      <% @restaurant.reviews.each do |review| %>
+        <div class="row">
+          <div class="col-sm-6">
+            <%= review.content %>
+          </div>
+          <div class="col-sm-6 text-right">
+            <%= "⭐" * review.rating %>
+          </div>
+        </div>
+        <hr>
+      <% end %>
+      <% end %>
+      <%= link_to 'Add Review', new_restaurant_review_path(@restaurant) %>
+    </div>
+  </div>
 </div>
