--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
+  <h3><%= @restaurant.name %> </h3>
+  <hr>
   <%= simple_form_for [@restaurant, @review] do |f| %>
     <%= f.input :content %>
-    <%= f.input :rating %>
+    <%= f.input :rating, input_html: { min: '1', max: '5' } %>
     <%= f.submit "Submit review" %>
   <% end %>
 </div>
