--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -3,7 +3,7 @@
     <%= f.input :name, placeholder: "Hungry Ghost" %>
     <%= f.input :address, placeholder: "479 Hong Kong" %>
     <%= f.input :phone_number, placeholder: "697-104-5501" %>
-    <%= f.input :category, placeholder: "Chinese" %>
+    <%= f.input :category, collection: Restaurant::CATEGORIES %>
     <%= f.submit value="Add Restaurant"%>
   <% end %>
 </div>
