--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,26 +2,34 @@
   <div class="row justify-content-md-center">
     <div class="col-sm-auto">
       <h2><%= @restaurant.name %></h2>
-      <p>Address: <%= @restaurant.address %></p> 
+      <p>Address: <%= @restaurant.address %></p>
       <p>Telephone: <%= @restaurant.phone_number.empty? ? "No info" : @restaurant.phone_number %></p>
       <p>Category: <%= @restaurant.category.capitalize %></p>
       <h4>Reviews:</h4>
       <% if @restaurant.reviews.empty? %>
-      <p>No reviews yet, write one ↙️ </p>
+        <p>No reviews yet, write one ↙️ </p>
       <% else %>
-      <% @restaurant.reviews.each do |review| %>
-        <div class="row">
-          <div class="col-sm-6">
-            <%= review.content %>
+        <% @restaurant.reviews.order(created_at: :desc).each do |review| %>
+          <div class="row">
+            <div class="col-sm-6">
+              <%= review.content %>
+            </div>
+            <div class="col-sm-6 text-right">
+              <%= "⭐" * review.rating %>
+            </div>
           </div>
-          <div class="col-sm-6 text-right">
-            <%= "⭐" * review.rating %>
-          </div>
-        </div>
-        <hr>
-      <% end %>
+          <hr>
+        <% end %>
+        <!-- <p>Add review ↙️ </p> -->
       <% end %>
       <%= link_to 'Add Review', new_restaurant_review_path(@restaurant) %>
+      <!--
+        <%#= simple_form_for [@restaurant, @review] do |f| %>
+          <%#= f.input :content %>
+          <%#= f.input :rating, input_html: { min: '1', max: '5' } %>
+          <%#= f.submit "Submit review" %>
+        <#% end %>
+      -->
     </div>
   </div>
 </div>
