--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,11 +11,16 @@
       <% else %>
         <% @restaurant.reviews.order(created_at: :desc).each do |review| %>
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
               <%= review.content %>
             </div>
-            <div class="col-sm-6 text-right">
+            <div class="col-sm-4 text-right">
               <%= "⭐" * review.rating %>
+            </div>
+            <div class="col-sm-4">
+              <%= link_to review_path(review), method: :delete, data: { confirm: "Are you sure?" } do %>
+                <i class="fa fa-trash destroy_review"></i>
+              <% end %>
             </div>
           </div>
           <hr>
