--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,6 +4,6 @@
   <%= simple_form_for [@restaurant, @review] do |f| %>
     <%= f.input :content %>
     <%= f.input :rating, input_html: { min: '1', max: '5' } %>
-    <%= f.submit "Submit review" %>
+    <%= f.submit "Submit review", class: 'btn btn-primary' %>
   <% end %>
 </div>
